--- a/MusicPlaylistApp/src/musicplaylistapp/MusicCollectionGui.form
+++ b/MusicPlaylistApp/src/musicplaylistapp/MusicCollectionGui.form
@@ -67,13 +67,13 @@
                       <Group type="102" attributes="0">
                           <Component id="likeSongButton" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="jButton1" max="32767" attributes="0"/>
+                          <Component id="showLikedSongsButton" max="32767" attributes="0"/>
                       </Group>
                       <Component id="songTitleTextField" min="-2" pref="340" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="addSongButton" pref="136" max="32767" attributes="0"/>
+                      <Component id="addSongButton" max="32767" attributes="0"/>
                       <Component id="searchSongButton" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace pref="155" max="32767" attributes="0"/>
@@ -91,7 +91,7 @@
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="likeSongButton" pref="40" max="32767" attributes="0"/>
-                      <Component id="jButton1" max="32767" attributes="0"/>
+                      <Component id="showLikedSongsButton" max="32767" attributes="0"/>
                       <Component id="searchSongButton" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -116,7 +116,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="addSongButton">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Add Song To List"/>
+            <Property name="text" type="java.lang.String" value="Add Song To List/View List"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addSongButtonActionPerformed"/>
@@ -130,15 +130,21 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="likeSongButtonActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton1">
+        <Component class="javax.swing.JButton" name="showLikedSongsButton">
           <Properties>
             <Property name="text" type="java.lang.String" value="Show liked songs"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="showLikedSongsButtonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="searchSongButton">
           <Properties>
             <Property name="text" type="java.lang.String" value="Search"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="searchSongButtonActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -165,13 +171,13 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="displayScrollPane" max="32767" attributes="0"/>
+                  <Component id="displayScrollPane" pref="227" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
                   <Component id="songCounterLabel" min="-2" pref="24" max="-2" attributes="0"/>
-                  <EmptySpace pref="194" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -186,9 +192,10 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JTextPane" name="displayArea">
+            <Component class="javax.swing.JTextArea" name="displayArea">
               <Properties>
-                <Property name="editable" type="boolean" value="false"/>
+                <Property name="columns" type="int" value="20"/>
+                <Property name="rows" type="int" value="5"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -222,7 +229,7 @@
                       <Component id="addToRapButton" pref="215" max="32767" attributes="0"/>
                       <Component id="addToPopButton" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="54" max="32767" attributes="0"/>
+                  <EmptySpace pref="94" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Component id="removeFromPopButton" pref="215" max="32767" attributes="0"/>
                       <Component id="removeFromRapButton" max="32767" attributes="0"/>
@@ -264,6 +271,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Add to Pop Playlist"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addToPopButtonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="removeFromPopButton">
           <Properties>
@@ -283,6 +293,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Show Pop Playlist"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="showPopPlaylistButtonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="addToRapButton">
           <Properties>
@@ -291,6 +304,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Add to Rap Playlist"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addToRapButtonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="removeFromRapButton">
           <Properties>
@@ -307,6 +323,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Show Rap Playlist"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="showRapPlaylistButtonActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
