--- a/MusicPlaylistApp/src/musicplaylistapp/MusicCollectionGui.form
+++ b/MusicPlaylistApp/src/musicplaylistapp/MusicCollectionGui.form
@@ -315,6 +315,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Remove from Rap Playlist"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="removeFromRapButtonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="showRapPlaylistButton">
           <Properties>
