--- a/MusicPlaylistApp/src/musicplaylistapp/MusicCollectionGui.form
+++ b/MusicPlaylistApp/src/musicplaylistapp/MusicCollectionGui.form
@@ -267,10 +267,12 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="showPopPlaylistButton" alignment="3" min="-2" pref="52" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="addToPopButton" alignment="0" min="-2" pref="52" max="-2" attributes="0"/>
-                      <Component id="removeFromPopButton" alignment="3" min="-2" pref="52" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="showPopPlaylistButton" alignment="3" min="-2" pref="52" max="-2" attributes="0"/>
+                          <Component id="removeFromPopButton" alignment="3" min="-2" pref="52" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
